Ensure longer collection title info is not clipped on collections page

--- a/app/assets/stylesheets/_search_results.scss
+++ b/app/assets/stylesheets/_search_results.scss
@@ -72,7 +72,7 @@
 
 // Collections - Grid View
 #documents.gallery .blacklight-collection {
-  min-height: 222px;
+  min-height: 225px;
   min-width: 188px;
   text-align: center;
 
